k8s/service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autogen
  namespace: autogen
  labels:
    app: autogen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autogen
  template:
    metadata:
      labels:
        app: autogen
    spec:
      imagePullSecrets:
        - name: ghcr.io
      volumes:
        - name: autogen-volume
          hostPath:
            path: /home/autogen
            type: DirectoryOrCreate

      containers:
        - name: autogen
          image: ghcr.io/dinavinter/autogen-studio:0.2.15-amd64
          imagePullPolicy: Always              
          ports:
              - containerPort: 8082
              - containerPort: 8081
          volumeMounts:
             - mountPath: /workspace
               name: autogen-volume 
               subPath: workspace
       

---
kind: Service
apiVersion: v1
metadata:
  name: autogen
  namespace: autogen
  labels:
    app: autogen
spec:
  selector:
    app: autogen
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      name: terminal
    - protocol: TCP
      port: 8081
      targetPort: 8081
      name: studio
